clusters/my-cluster/cilium/huble-ui-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ui-hubble-route
  namespace: kube-system
spec:
  parentRefs:
    #- name: traefik-gateway
    #  namespace: traefik
    - name: cilium-gateway
      namespace: kube-system
  hostnames:
    - hubble.lab.jake-watson.co.uk
  rules:
  - backendRefs:
      - name: hubble-ui
        port: 80
