clusters/my-cluster/cilium/cilium-netowkr-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "http-ingress-visiblity"
spec:
  description: "Allow HTTP GET /public from env=prod to app=service"
  endpointSelector:
    matchLabels: {}
  ingress:
  - fromEntities:
    - all
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      - port: "443"
        protocol: TCP
      - port: "8000"
        protocol: TCP
      - port: "8443"
        protocol: TCP
      rules:
        http:
        - {}
